--- a/assets/webconfig/i18n/nl.json
+++ b/assets/webconfig/i18n/nl.json
@@ -1,5 +1,5 @@
 {
-    "general_webui_title": "Hyperion - Web Instellingen",
+    "general_webui_title": "Hyperion - Web-instellingen",
     "general_country_de": "Duitsland",
     "general_country_us": "Verenigde Staten",
     "general_country_uk": "Verenigd Koninkrijk",
@@ -18,12 +18,12 @@
     "general_comp_SMOOTHING": "Vloeiend",
     "general_comp_BLACKBORDER": "Zwarte rand detectie",
     "general_comp_FORWARDER": "Forwarder",
-    "general_comp_BOBLIGHTSERVER": "Boblight Server",
-    "general_comp_FLATBUFSERVER": "Flatbuffers Server",
-    "general_comp_PROTOSERVER": "Protocol Buffers Server",
+    "general_comp_BOBLIGHTSERVER": "Boblight-server",
+    "general_comp_FLATBUFSERVER": "Flatbuffers-server",
+    "general_comp_PROTOSERVER": "Protocol Buffers-server",
     "general_comp_GRABBER": "Platform Capture",
     "general_comp_V4L": "USB Vastleggen",
-    "general_comp_LEDDEVICE": "LED Apparaat",
+    "general_comp_LEDDEVICE": "LED-apparaat",
     "general_col_red": "rood",
     "general_col_green": "groen",
     "general_col_blue": "blauw",
@@ -41,10 +41,10 @@
     "general_btn_back": "Vorige",
     "general_btn_iswitch": "Schakel",
     "general_wiki_moreto": "Meer informatie over \"$1\" is beschikbaar op onze",
-    "dashboard_label_intro": "Het dashboard geeft je een overzicht van de status van Hyperion en toont de laatste updates van de Hyperion blog.",
+    "dashboard_label_intro": "Het dashboard geeft je een overzicht van de status van Hyperion en toont de laatste updates van de Hyperion-blog.",
     "dashboard_infobox_label_title": "Informatie",
-    "dashboard_infobox_label_currenthyp": "Jouw Hyperion versie:",
-    "dashboard_infobox_label_latesthyp": "Laatste Hyperion versie",
+    "dashboard_infobox_label_currenthyp": "Jouw Hyperion-versie:",
+    "dashboard_infobox_label_latesthyp": "Laatste Hyperion-versie",
     "dashboard_infobox_label_platform": "Platform",
     "dashboard_infobox_label_instance": "Instantie",
     "dashboard_infobox_label_ports": "Poorten (flat|proto):",
@@ -52,13 +52,13 @@
     "dashboard_infobox_message_updatesuccess": "Je draait de laatste versie van Hyperion",
     "dashboard_infobox_label_statush": "Hyperion status:",
     "dashboard_infobox_label_smartacc": "Slimme toegang",
-    "dashboard_infobox_label_enableh": "Schakel Instantie $1 in",
-    "dashboard_infobox_label_disableh": "Schakel Instantie $1 uit",
-    "dashboard_componentbox_label_title": "Componenten status",
+    "dashboard_infobox_label_enableh": "Schakel instantie $1 in",
+    "dashboard_infobox_label_disableh": "Schakel instantie $1 uit",
+    "dashboard_componentbox_label_title": "Componentenstatus",
     "dashboard_componentbox_label_comp": "Component",
     "dashboard_componentbox_label_status": "Status",
     "dashboard_newsbox_label_title": "Hyperion blog",
-    "dashboard_newsbox_visitblog": "Bezoek Hyperion blog",
+    "dashboard_newsbox_visitblog": "Bezoek Hyperionblog",
     "dashboard_newsbox_noconn": "Kan geen verbinding maken met Hyperion Server om de laatste berichten op te halen, werkt je internetverbinding?",
     "dashboard_newsbox_readmore": "Lees meer",
     "dashboard_alert_message_confedit_t": "Configuratie gewijzigd",
@@ -87,11 +87,11 @@
     "main_ledsim_title": "LED-visualisatie",
     "main_ledsim_text": "Live visualisatie van led-kleuren en optioneel de huidige videostream van uw capture-apparaat.",
     "main_ledsim_btn_toggleleds": "Toon LEDs",
-    "main_ledsim_btn_togglelednumber": "LED nummers",
-    "main_ledsim_btn_togglelivevideo": "Live video",
+    "main_ledsim_btn_togglelednumber": "LED-nummers",
+    "main_ledsim_btn_togglelivevideo": "Live-video",
     "conf_general_label_title": "Algemene instellingen",
     "conf_general_intro": "Basisinstellingen van Hyperion en WebUI die niet in een andere categorie passen.",
-    "conf_general_impexp_title": "Importeer/Exporteer Configuratie",
+    "conf_general_impexp_title": "Importeer/Exporteer configuratie",
     "conf_general_impexp_l1": "Importeer een configuratie door hieronder een configuratiebestand te selecteren en klik op \"Importeren\".",
     "conf_general_impexp_l2": "Exporteer een configuratie door op \"Exporteren\" te klikken. Uw browser start een download.",
     "conf_general_impexp_impbtn": "Importeer",
@@ -103,8 +103,8 @@
     "conf_effect_bgeff_intro": "Definieer een achtergrond effect of kleur die te zien is tijdens een inactief moment van Hyperion.Start altijd met een kanaal prioriteit van 255.",
     "conf_leds_device_intro": "Hyperion ondersteunt verschillende controllers om gegevens naar uw doelapparaat te verzenden. Selecteer een LED-controller uit de gesorteerde lijst en configureer deze. We hebben voor elk apparaat de beste standaardinstellingen gekozen.",
     "conf_leds_layout_intro": "U heeft ook een led-layout nodig, die uw led-posities weerspiegelt. De klassieke lay-out is een tv-frame, maar we ondersteunen ook een led-matrix. De layout is ALTIJD gericht op de voorkant van de tv.",
-    "conf_leds_nav_label_ledcontroller": "LED Besturing",
-    "conf_leds_nav_label_ledlayout": "LED Opmaak",
+    "conf_leds_nav_label_ledcontroller": "LED-besturing",
+    "conf_leds_nav_label_ledlayout": "LED-opmaak",
     "conf_leds_contr_label_contrtype": "Besturingstype",
     "conf_leds_optgroup_RPiSPI": "RPi SPI",
     "conf_leds_optgroup_RPiPWM": "RPi PWM",
@@ -139,10 +139,10 @@
     "conf_leds_layout_cl_gappos": "Positie van ruimte",
     "conf_leds_layout_cl_inppos": "Invoer positie",
     "conf_leds_layout_cl_reversdir": "Keer richting om",
-    "conf_leds_layout_cl_hleddepth": "Horizontale LED diepte",
-    "conf_leds_layout_cl_vleddepth": "Verticale LED diepte",
-    "conf_leds_layout_cl_edgegap": "Grens gat",
-    "conf_leds_layout_cl_cornergap": "Hoek gat",
+    "conf_leds_layout_cl_hleddepth": "Horizontale LED-diepte",
+    "conf_leds_layout_cl_vleddepth": "Verticale LED-diepte",
+    "conf_leds_layout_cl_edgegap": "Grensgat",
+    "conf_leds_layout_cl_cornergap": "Hoekgat",
     "conf_leds_layout_cl_overlap": "Overlap",
     "conf_leds_layout_ma_horiz": "Horizontaal",
     "conf_leds_layout_ma_vert": "",
@@ -762,7 +762,7 @@
     "conf_network_tok_desc": "",
     "conf_network_tok_cidhead": "Beschrijving",
     "conf_network_tok_lastuse": "Recent gebruikt",
-    "conf_network_tok_comment_title": "Token beschrijving",
+    "conf_network_tok_comment_title": "Token-beschrijving",
     "conf_network_createToken_btn": "Maak token aan",
     "conf_network_tok_diaTitle": "Nieuwe token aangemaakt!",
     "conf_network_tok_diaMsg": "",
@@ -785,7 +785,7 @@
     "edt_conf_webc_crtPath_expl": "",
     "edt_conf_webc_keyPath_title": "",
     "edt_conf_webc_keyPath_expl": "",
-    "edt_conf_webc_keyPassPhrase_title": "Sleutel wachtwoord",
+    "edt_conf_webc_keyPassPhrase_title": "Sleutelwachtwoord",
     "edt_conf_webc_keyPassPhrase_expl": "",
     "remote_effects_label_picture": "",
     "dashboard_active_instance": "",
@@ -795,8 +795,8 @@
     "edt_conf_fw_flat_expl": "",
     "edt_conf_fw_flat_itemtitle": "",
     "edt_dev_spec_pwmChannel_title": "",
-    "dashboard_message_default_password_t": "WebUi standaard wachtwoord is ingesteld",
-    "dashboard_message_default_password": "Het standaard wachtwoord voor de WebUi is ingesteld. We raden je aan dit te veranderen",
+    "dashboard_message_default_password_t": "WebUi standaardwachtwoord is ingesteld",
+    "dashboard_message_default_password": "Het standaardwachtwoord voor de WebUi is ingesteld. We raden je aan dit te veranderen",
     "InfoDialog_changePassword_title": "Verander wachtwoord",
     "InfoDialog_changePassword_success": "Wachtwoord succesvol opgeslagen!",
     "edt_conf_net_localAdminAuth_title": "",
