instance switcher changes

--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -71,8 +71,7 @@
 	"dashboard_infobox_label_enableh" : "Enable Instance: $1",
 	"dashboard_infobox_label_disableh" : "Disable Instance: $1",
 	"dashboard_componentbox_label_title" : "Components status",
-	"dashboard_componentbox_label_comp" : "Component",
-	"dashboard_componentbox_label_status" : "Status",
+	"dashboard_instance_label_status": "Status",
 	"dashboard_newsbox_label_title" : "Hyperion-Blog",
 	"dashboard_newsbox_visitblog" : "Visit Hyperion-Blog",
 	"dashboard_newsbox_noconn" : "Can't connect to Hyperion Server to retrieve latest posts, does your internet connection work?",
@@ -90,7 +89,7 @@
 	"dashboard_message_do_not_show_again": "Do not show this message again",
 	"dashboard_active_instance": "Selected instance",
 	"main_menu_dashboard_token" : "Dashboard",
-	"main_menu_configuration_token" : "Configuration",
+	"main_menu_configuration_token" : "Instances",
 	"main_menu_general_conf_token" : "General",
 	"main_menu_leds_conf_token" : "LED Hardware",
 	"main_menu_grabber_conf_token" : "Capturing Hardware",
