New language support: Russian and Chinese (simplified)

--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -7,6 +7,8 @@
 	"general_country_es" : "Spain",
 	"general_country_it" : "Italy",
 	"general_country_nl" : "Netherlands",
+	"general_country_ru" : "Russia",
+	"general_country_cn" : "China",
 	"general_speech_de" : "German",
 	"general_speech_en" : "English",
 	"general_speech_es" : "Spanish",
@@ -19,6 +21,8 @@
 	"general_speech_tr" : "Turkish",
 	"general_speech_vi" : "Vietnamese",
 	"general_speech_fr" : "French",
+	"general_speech_ru" : "Russian",
+	"general_speech_zh-CN" : "Chinese (simplified)",
 	"general_access_default" : "Default",
 	"general_access_advanced" : "Advanced",
 	"general_access_expert" : "Expert",
