--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -466,6 +466,8 @@
     "edt_dev_spec_intervall_title": "Interval",
     "edt_dev_spec_invert_title": "Invert signal",
     "edt_dev_spec_latchtime_title": "Latch time",
+    "edt_dev_spec_globalBrightnessControlMaxLevel_title": "Max Current Level",
+    "edt_dev_spec_globalBrightnessControlThreshold_title": "Adaptive Current Threshold",
     "edt_dev_spec_ledIndex_title": "LED index",
     "edt_dev_spec_ledType_title": "LED Type",
     "edt_dev_spec_lightid_itemtitle": "ID",
