Feature: Weighted Moving Average Smoothing with Decay

--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -281,6 +281,7 @@
     "edt_conf_enum_hsv": "HSV",
     "edt_conf_enum_left_right": "Left to right",
     "edt_conf_enum_linear": "Linear",
+    "edt_conf_enum_decay": "Decay",
     "edt_conf_enum_logdebug": "Debug",
     "edt_conf_enum_logsilent": "Silent",
     "edt_conf_enum_logverbose": "Verbose",
@@ -374,6 +375,14 @@
     "edt_conf_smooth_type_title": "Type",
     "edt_conf_smooth_updateDelay_expl": "Delay the output in case your ambient light is faster than your TV.",
     "edt_conf_smooth_updateDelay_title": "Update delay",
+    "edt_conf_smooth_interpolationRate_expl": "Speed of the calculation of smooth intermediate frames.",
+    "edt_conf_smooth_interpolationRate_title": "Interpolation Rate",
+    "edt_conf_smooth_outputRate_title": "Output Rate",
+    "edt_conf_smooth_outputRate_expl": "The output speed to your led controller.",
+    "edt_conf_smooth_decay_title": "Decay-Power",
+    "edt_conf_smooth_decay_expl": "The speed of decay. 1 is linear, greater values are have stronger effect.",
+    "edt_conf_smooth_dithering_title": "Dithering",
+    "edt_conf_smooth_dithering_expl": "Improve color accuracy at high output speeds by alternating between adjacent colors.",
     "edt_conf_smooth_updateFrequency_expl": "The output speed to your led controller.",
     "edt_conf_smooth_updateFrequency_title": "Update frequency",
     "edt_conf_v4l2_blueSignalThreshold_expl": "Darkens low blue values (recognized as black)",
