Implement letterbox-only blackbar detection mode
Implements feature request #1031
This new mode is designed to minimise false-positives in the X-direction during dimly-lit scenes, or where a shot has a predominantly black background. Suitable for widescreen movies and TV shows.

--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -261,6 +261,7 @@
     "edt_conf_enum_automatic": "Automatic",
     "edt_conf_enum_bbclassic": "Classic",
     "edt_conf_enum_bbdefault": "Default",
+    "edt_conf_enum_bbletterbox": "Letterbox",
     "edt_conf_enum_bbosd": "OSD",
     "edt_conf_enum_bgr": "BGR",
     "edt_conf_enum_bottom_up": "Bottom up",
