--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -854,7 +854,6 @@
     "update_versreminder": "Your version: $1",
     "wiz_atmoorb_desc2": "Now choose which Orbs should be added. The position assigns the lamp to a specific position on your \"picture\". Disabled lamps won't be added. To identify single lamps press the button on the right.",
     "wiz_atmoorb_intro1": "This wizards configures Hyperion for AtmoOrbs. Features are the AtmoOrb auto detection, setting each light to a specific position on your picture or disable it and optimise the Hyperion settings automatically! So in short: All you need are some clicks and you are done!",
-    "wiz_atmoorb_noLights": "No AtmoOrbs found! Please get the lights connected to the network or configure them manually.",
     "wiz_atmoorb_title": "AtmoOrb Wizard",
     "wiz_cc_adjustgamma": "Gamma: What you have to do is, adjust gamma levels of each channel until you have the same perceived amount of each channel. Hint: Neutral is 1.0! For example, if your Grey is a bit reddish it means that you have to increase red gamma to reduce the amount of red (the more gamma, the less amount of color).",
     "wiz_cc_adjustit": "Adjust your \"$1\", until your are fine with it. Take notice: The more you adjust away from the default value the color spectrum will be limited (Also for all colors in between). Depending on TV/LED color spectrum the results will vary.",
@@ -878,6 +877,10 @@
     "wiz_cc_testintrok": "Push on a button below to start a test video.",
     "wiz_cc_testintrowok": "Check out the following link to download test videos:",
     "wiz_cc_title": "Colour calibration wizard",
+    "wiz_cololight_desc2": "Now choose which Cololights should be added. To identify single lights, press the button on the right.",
+    "wiz_cololight_intro1": "This wizards configures Hyperion for the Cololight system. Features are the Cololight auto detection and tune the Hyperion settings automatically! In short: All you need are some clicks and you are done!<br />Note: In case of Cololight Strip, you might need to manually correct the LED count and layout.",
+    "wiz_cololight_noprops": "Not able to get device properties - Define Hardware LED count manually",
+    "wiz_cololight_title": "Cololight Wizard",    
     "wiz_guideyou": "The $1 will guide you through the settings. Just press the button!",
     "wiz_hue_blinkblue": "Let ID $1 light up blue",
     "wiz_hue_clientkey": "Clientkey:",
@@ -911,6 +914,7 @@
     "wiz_identify_light": "Identify $1",
     "wiz_ids_disabled": "Deactivated",
     "wiz_ids_entire": "Whole picture",
+    "wiz_noLights": "No $1 found! Please get the lights connected to the network or configure them manually.",    
     "wiz_pos": "Position/State",
     "wiz_rgb_expl": "The color dot switches every x seconds the color (red, green), at the same time your LEDs switch the color too. Answer the questions at the bottom to check/correct your byte order.",
     "wiz_rgb_intro1": "This wizard will guide you through the finding process of the correct color order for your leds. Click on continue to begin.",
@@ -923,7 +927,6 @@
     "wiz_wizavail": "Wizard available",
     "wiz_yeelight_desc2": "Now choose which lamps should be added. The position assigns the lamp to a specific position on your \"picture\". Disabled lamps won't be added. To identify single lamps press the button on the right.",
     "wiz_yeelight_intro1": "This wizards configures Hyperion for the Yeelight system. Features are the Yeelighs' auto detection, setting each light to a specific position on your picture or disable it and tune the Hyperion settings automatically! So in short: All you need are some clicks and you are done!",
-    "wiz_yeelight_noLights": "No Yeelights found! Please get the lights connected to the network or configure them manually.",
     "wiz_yeelight_title": "Yeelight Wizard",
     "wiz_yeelight_unsupported": "Unsupported"
 }
