--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -424,6 +424,20 @@
     "edt_conf_v4l2_sizeDecimation_title": "Size decimation",
     "edt_conf_v4l2_standard_expl": "Select the video standard for your region. 'Automatic' keeps the value chosen by the v4l2 interface.",
     "edt_conf_v4l2_standard_title": "Video standard",
+    "edt_conf_v4l2_fpsSoftwareDecimation_title" : "Software frame skipping",
+    "edt_conf_v4l2_fpsSoftwareDecimation_expl" : "To save resources every n'th frame will be processed only. For ex. if grabber is set to 30FPS with this option set to 5 the final result will be around 6FPS (1 - disabled)",
+    "edt_conf_v4l2_encoding_title" : "Encoding format",
+    "edt_conf_v4l2_encoding_expl" : "Force video encoding for multiformat capable grabbers",
+	"edt_conf_v4l2_hardware_brightness_title" : "Hardware brightness control",
+	"edt_conf_v4l2_hardware_brightness_expl" : "Set hardware brightness if device supports it, check logs (0=disabled)",
+	"edt_conf_v4l2_hardware_contrast_title" : "Hardware contrast control",
+	"edt_conf_v4l2_hardware_contrast_expl" : "Set hardware contrast if device supports it, check logs (0=disabled)",
+	"edt_conf_v4l2_noSignalCounterThreshold_title" : "Signal Counter Threshold",
+	"edt_conf_v4l2_noSignalCounterThreshold_expl" : "Count of frames (check that with grabber's current FPS mode) after which the no signal is triggered",
+	"edt_conf_v4l2_hardware_saturation_title" : "Hardware saturation control",
+	"edt_conf_v4l2_hardware_saturation_expl" : "Set hardware saturation if device supports it, check logs (0=disabled)",
+	"edt_conf_v4l2_hardware_hue_title" : "Hardware hue control",
+	"edt_conf_v4l2_hardware_hue_expl" : "Set hardware hue if device supports it, check logs (0=disabled)",
     "edt_conf_webc_crtPath_expl": "Path to the certification file (format should be PEM)",
     "edt_conf_webc_crtPath_title": "Certificate path",
     "edt_conf_webc_docroot_expl": "Local webinterface root path (just for webui developer)",
